--- a/env_linux.yml
+++ b/env_linux.yml
@@ -7,3 +7,7 @@ dependencies:
   - pandas=1.1.1
   - pip=20.2.2
   - Scrapy=2.0.1
+  - pip:
+    - google-auth==1.28.1
+    - google-cloud-storage==1.37.1
+    - google-auth-oauthlib==0.4.4
